# rave

./: .clangd  .gitignore  build.ps1  build.sh  rave-cli  rave.radpj  rave.radusr  readme.md  test_lsp.ps1  watch.ps1
.zed/: debug.json  tasks.json
cpp/: .clangd  CMakeLists.txt
cpp/rave/: arena.cpp  arena.hpp  context.hpp  io.hpp  main.cpp  text.hpp
cpp/rave_llvm/: main.hpp
doc/: bytecode.md
plugins/rave-treesitter/: CMakeLists.txt  Cargo.toml  Package.swift  binding.gyp  build.zig  build.zig.zon  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
plugins/rave-treesitter/bindings/c/: tree-sitter-rave.pc.in
plugins/rave-treesitter/bindings/c/tree_sitter/: tree-sitter-rave.h
plugins/rave-treesitter/bindings/go/: binding.go  binding_test.go
plugins/rave-treesitter/bindings/node/: binding.cc  index.d.ts  index.js
plugins/rave-treesitter/bindings/python/tests/: test_binding.py
plugins/rave-treesitter/bindings/python/tree_sitter_rave/: __init__.py  binding.c
plugins/rave-treesitter/bindings/rust/: build.rs  lib.rs
plugins/rave-treesitter/bindings/swift/TreeSitterRaveTests/: TreeSitterRaveTests.swift
plugins/rave-treesitter/bindings/zig/: root.zig  test.zig
plugins/rave-treesitter/src/: grammar.json  parser.c
plugins/rave-vscode/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package-lock.json  package.json  vsc-extension-quickstart.md
plugins/rave-vscode/syntaxes/: rave.tmLanguage.json
plugins/rave-zed/: Cargo.toml  extension.toml  extension.wasm
plugins/rave-zed/languages/rave/: config.toml
plugins/rave-zed/src/: lib.rs
src/: .clang-format  .clangd  CMakeLists.txt
src/cli/: main.c  main.cpp  rv_cli.c  rv_cli.cpp  rv_cli.h  rv_cli_os.c  rv_cli_os.h
src/lang/: rv_alloc.cpp  rv_alloc.h  rv_arena.c  rv_arena.h  rv_block.h  rv_common.h  rv_context.c  rv_context.cpp  rv_context.h  rv_event.h  rv_ir.h  rv_os_mem.c  rv_os_mem.h
src/rave/: common.hpp  context.cpp  context.hpp  io.cpp  io.hpp  main.cpp
src/tests/lang/: test_arena.cpp
